--- a/manifest/flux/flux-kustomization.yaml
+++ b/manifest/flux/flux-kustomization.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m0s
-  path: ./flux
+  path: ./manifest/flux
   prune: true
   sourceRef:
     kind: GitRepository
